举手功能开发完毕

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	  <li>聊天</li>
 	  <li>举手功能开发50%</li>
 	  <li>举手开发功能开发到80%</li>
+	  <li>举手开发功能开发到80%</li>
+	  <li>举手开发功能开发完成</li>
     </ul>
 </body>
 </html>
